--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
+<html>
+<head>
 
 <!--- Titre --->
 <title> Douceurs Gourmandes </title>
 
+<!--- Couleur Arrière-Plan --->
+<body style="background-color:black">
+</head>
+
 <!--- Page --->
 <center>
+  <p style="#FFFFFF"
   <h1> Bienvenue ! </h1>
-  <br></br>
-<h2>Sur le Site Web de Douceurs Gourmandes à Mugron.</h2> 
+  <h2>Sur le Site Web de Douceurs Gourmandes à Mugron.</h2> 
+  <marquee behavior="scroll" direction="left" width="100%" bgcolor="#FFFFFF">
+   <h2>Texte défilant horizontalement</h2>
+</marquee><br>
+  
+  </p>
+</body>
+</html>
