--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <!--- Page --->
 <center>
-  <p style="#FFFFFF"
+  <p style="#000000"
   <h1> Bienvenue ! </h1>
   <h2>Sur le Site Web de Douceurs Gourmandes à Mugron.</h2> 
-  <marquee behavior="scroll" direction="left" width="100%" bgcolor="#FFFFFF">
-   <h2>Texte défilant horizontalement</h2>
+  <marquee behavior="scroll" direction="left" width="100%" bgcolor="#000000">
+   <h2>Image</h2>
 </marquee><br>
   
   </p>
