--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
 <!--- Couleur Arrière-Plan --->
 <body style="background-color:black">
 </head>
+  
+<!--- Couleur Texte --->
+<p style="color:#FF0000";>
 
 <!--- Page --->
 <center>
-  <h1 style="#FFFFFF"> Bienvenue ! </h1>
-  <h2>Sur le Site Web de Douceurs Gourmandes à Mugron.</h2> 
+  <h1> Bienvenue ! </h1>
+  <h2> Sur le Site Web de Douceurs Gourmandes à Mugron. </h2> 
   <marquee behavior="scroll" direction="left" width="100%" bgcolor="#000000">
-   <h2>Image</h2>
-</marquee><br>
-  
+   <h2> Image </h2>
+</marquee>
+
+  </p>
 </body>
 </html>
