--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
+<html lang="fr">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <html>
 <head>
+  
+<!--- Icon --->
+  <link rel='shortcut icon' type='image/png' href="Images/Icon.png" />
 
 <!--- Titre --->
-<title> Douceurs Gourmandes </title>
+  <title> Douceurs Gourmandes </title>
 
 <!--- Couleur Arrière-Plan --->
-<body style="background-color:black">
-</head>
+  <body style="background-color:black">
+  </head>
 
 <!--- Page --->
 <p style="color:#FF0000";>
