--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 <!--- Couleur Arrière-Plan --->
   <body style="background-color:black">
   </head>
+  
+<!--- Couleur Texte --->
+  <p style="color:white">
 
 <!--- Page --->
-<p style="color:#FF0000";>
 <center>
   <h1> Bienvenue ! </h1>
   <h2> Sur le Site Web de Douceurs Gourmandes à Mugron. </h2> 
