--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
 
 <!--- Page --->
 <center>
-  <p style="color:white">
-  <h1> Bienvenue ! </h1>
-  <h2> Sur le Site Web de Douceurs Gourmandes à Mugron. </h2> 
+  <h1><p style="color:white"> Bienvenue ! </h1>
+  <h2><p style="color:white"> Sur le Site Web de Douceurs Gourmandes à Mugron. </h2> 
   <marquee behavior="scroll" direction="left" width="100%" bgcolor="#000000">
-   <h2> Image </h2>
+   <h2><p style="color:white"> Image </h2>
 </marquee>
 
   </p>
