--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 <center>
   <h1><p style="color:white"> Bienvenue ! </h1>
   <h2><p style="color:white"> Sur le Site Web de Douceurs Gourmandes à Mugron. </h2> 
-  <marquee behavior="scroll" direction="left" width="100%" bgcolor="#000000">
-   <h2><p style="color:white"> Image </h2>
+   <div class="bandef"><img src="Images/" />
 </marquee>
 
   </p>
