--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <center>
   <h1><p style="color:white"> Bienvenue ! </h1>
   <h2><p style="color:white"> Sur le Site Web de Douceurs Gourmandes à Mugron. </h2> 
-   <div class="bandef"><img src="Images/" />
+   <div class="bandef"><img src="Images/Pain1.png" />
 </marquee>
 
   </p>
