--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <!--- Page --->
 <center>
   <h1><p style="color:white"> Bienvenue ! </h1>
-  <h2><p style="color:white"> Sur le Site Web de Douceurs Gourmandes à Mugron. </h2> 
+  <h2><p style="color:white"> Sur le Site Web de Douceurs Gourmandes à Mugron. </h2>
+  <marquee behavior="scroll" direction="left" width="100%" bgcolor="#000000">
    <div class="bandef"><img src="Images/Pain1.png" />
 </marquee>
 
