--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <h2><p style="color:white"> Sur le Site Web de Douceurs Gourmandes </h2>
   <h3><p style="color:white"> Mugron (05 58 97 70 24) </h2>
   <marquee behavior="scroll" direction="left" width="100%" bgcolor="#000000">
-   <div class="bandef"><img src="Images/Pain1.png" /><div class="bandef"><img src="Images/Verine1.png" /><div class="bandef"><img src="Images/Gâteau1.png" />
+   <div class="bandef"><img src="Images/Pain1.png" /><img src="Images/Verine1.png" /><img src="Images/Gâteau1.png" />
 </marquee>
 
     
