--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
   </head>
 
 <!--- Page --->
-<right>
-  <input type="button" onclick="location.href='https://www.pagesjaunes.fr/pros/59435569';" value="Pages Jaunes" />
-</right>
+<input type="button" align="right" onclick="location.href='https://www.pagesjaunes.fr/pros/59435569';" value="Pages Jaunes" />
 <center>
   <h1><p style="color:white"> Bienvenue ! </h1>
   <h2><p style="color:white"> Sur le Site Web de Douceurs Gourmandes </h2>
